no longer white space under application

--- a/app/assets/stylesheets/components/modals/server_modal.css
+++ b/app/assets/stylesheets/components/modals/server_modal.css
@@ -8,8 +8,7 @@
 }
 
 .server-modal__hide {
-  visibility: hidden;
-  height: 0;
+  display: none;
 }
 
 .server-modal {
